// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Menu Matches the snapshot (desktop) 1`] = `
.c2 {
  color: #FFFFFF;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #012639;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  height: 100%;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<header
  class="c0"
>
  <a
    aria-label="Home"
    class="c1"
    href="/"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      style="height:100%"
    />
  </a>
  <div
    class="c2"
  >
    Hello, World!
  </div>
</header>
`;

exports[`Application Menu Matches the snapshot (mobile) 1`] = `
.c4 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  height: calc(100vh - 56px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 56px;
  -webkit-transform: translate(100%);
  -ms-transform: translate(100%);
  transform: translate(100%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c3 > .c3 {
  height: 100%;
  top: 0;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  cursor: pointer;
  margin: 0;
  padding: 0;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #012639;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: var(--spacing-2x);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  height: 100%;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<header
  class="c0"
>
  <a
    aria-label="Home"
    class="c1"
    href="/"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      style="height:100%"
    />
  </a>
  <button
    aria-controls="menu-drawer"
    aria-expanded="false"
    aria-label="Navigation"
    class="c2"
    type="button"
  >
    <svg
      color="#FFFFFF"
      focusable="false"
      height="24"
      width="24"
    />
  </button>
  <div
    aria-hidden="true"
    class="c3 c4"
    id="menu-drawer"
    origin="right"
    width="100%"
  >
    <p>
      Test
    </p>
  </div>
</header>
`;

exports[`Application Menu mobileDrawerContent prop adds a side drawer and burger button in mobile 1`] = `
.c4 {
  background-color: #FFFFFF;
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  height: calc(100vh - 56px);
  right: 0;
  overflow-x: hidden;
  overflow-y: auto;
  position: fixed;
  top: 56px;
  -webkit-transform: translate(100%);
  -ms-transform: translate(100%);
  transform: translate(100%);
  -webkit-transition: -webkit-transform 300ms;
  -webkit-transition: transform 300ms;
  transition: transform 300ms;
  width: 100%;
  z-index: 100;
}

.c3 > .c3 {
  height: 100%;
  top: 0;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid transparent;
  cursor: pointer;
  margin: 0;
  padding: 0;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #012639;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: var(--spacing-2x);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  font-weight: var(--font-bold);
  height: 100%;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<header
  class="c0"
>
  <a
    aria-label="Home"
    class="c1"
    href="/"
  >
    <svg
      aria-hidden="true"
      focusable="false"
      style="height:100%"
    />
  </a>
  <button
    aria-controls="menu-drawer"
    aria-expanded="false"
    aria-label="Navigation"
    class="c2"
    type="button"
  >
    <svg
      color="#FFFFFF"
      focusable="false"
      height="24"
      width="24"
    />
  </button>
  <div
    aria-hidden="true"
    class="c3 c4"
    id="menu-drawer"
    origin="right"
    width="100%"
  >
    <p>
      Test
    </p>
  </div>
</header>
`;
